Typos, links, etc.

--- a/_posts/2024-07-05-ibm-mt-sc-1.md
+++ b/_posts/2024-07-05-ibm-mt-sc-1.md
@@ -230,7 +230,7 @@ A single type element, identified by MT/SR, is present. The list of parts refers
 
 ![The type element](/assets/posts/ibm-mtsc/2x/IMG_2752.jpg){:standalone}
 
-Like the regular Selectric I/O typewriter, the machine is taller than a regular Selectric I typewriter, but the bottom part is meant to fit into a recess in a desk. The "underwater" is almost the same height as the "above water" part.
+Like the regular Selectric I/O typewriter, the machine is taller than a regular Selectric I typewriter, but the bottom part is meant to fit into a recess in a desk. The "underwater" part is almost the same height as the "above water" part.
 
 ![The I/O typewriter profile](/assets/posts/ibm-mtsc/2x/IMG_2954.jpg){:standalone}
 
@@ -305,7 +305,7 @@ The front panel includes the following:
 
 ![The tape console front panel](/assets/posts/ibm-mtsc/2x/IMG_4682.jpg){:standalone}
 
-The console is way larger than it needs to be, but it is clear that IBM just reused the full MT/ST console hardware, which needed much more space for its large relay bank. Similarly, the console's front panel is way too large for the few buttons and indicators it contains. On the MT/ST II and IV, which has two large dials, many more buttons, and a double-digit indicator, it makes more sense.
+The console is way larger than it needs to be, but it is clear that IBM just reused the full MT/ST console hardware, which needed much more space for its large relay bank. Similarly, the console's front panel is way too large for the few buttons and indicators it contains. On the MT/ST II and IV, which have two large dials, many more buttons, and a double-digit indicator, it makes more sense.
 
 Inside, we have a small-ish power supply, with fuses and, interestingly, two power outlets:
 
@@ -335,11 +335,25 @@ I couldn't help cleaning and polishing the keys right away:
 
 The typewriter fits into a recess in the desk. A rubber ring seals the typewriter so that it fits snugly. But the typewriter actually mostly rests on a base underneath the desk top.
 
-The cable, for both data and power, nicely routes out of the desk to the tape console unit, which includes the power supply and electronics in addition to the tape drive. This gives the system a very clean look, with just one cable going apparently from the desk to the tape console, and then one power cable going from an outlet to the tape console.
+The cable, for both data and power, nicely routes out of the desk to the tape console unit, which includes the power supply and electronics in addition to the tape drive. This gives the system a very clean look, with just one visible cable going from the desk to the tape console, and then one power cable going from an outlet to the tape console.
 
 ## Temporary conclusion
 
 In this post, I placed the IBM MT/SC in its context, described its various parts at a high level, and covered the input station in more details. In the next part, I cover the output station, and more. See [The IBM Magnetic Tape Selectric Composer - Part 2](../ibm-mt-sc-2/).
+
+## References
+
+- Photo albums
+    - [IBM Selectric MT/SR 655 (196x) - Part 1](https://photos.app.goo.gl/b2nUgQbtJqSAePYcA)
+    - [IBM Selectric Modified Composer (196x) - Part 1](https://photos.app.goo.gl/ZcerSWkfnVC6CTNW9)
+    - [IBM MT/ST Recorder Model V (1965) - Part 1](https://photos.app.goo.gl/frcRs9rP2K8xRmjq5)
+    - [IBM MT/SC Composer (1969) - Part 1](https://photos.app.goo.gl/f8FbWrTDhHTV4phU6)
+    - [MT/ST Composer/Recorder - Restoration in progress](https://photos.app.goo.gl/Kby6wp6gz5BGmnAn7)
+- TWDB
+    - [1969 IBM Selectric Recorder](https://typewriterdatabase.com/1969-ibm-selectric-recorder.22536.typewriter) 
+    - [1969 IBM Selectric Composer](https://typewriterdatabase.com/1969-ibm-selectric-composer.22534.typewriter)
+    - [1969 IBM Magnetic Tape Selectric Recorder](https://typewriterdatabase.com/1969-ibm-magnetic-tape-selectric-recorder.22539.typewriter)
+    - [1969 IBM Magnetic Tape Selectric Composer](https://typewriterdatabase.com/1969-ibm-magnetic-tape-selectric-composer.22538.typewriter)
 
 ---
 
