--- a/_posts/2024-07-05-ibm-mt-sc-2.md
+++ b/_posts/2024-07-05-ibm-mt-sc-2.md
@@ -45,7 +45,7 @@ You can see, on the back left, the part that deals with the proportional escapem
 
 ![The proportional esxapeement](/assets/posts/ibm-mtsc/2x/IMG_2986.jpg){:standalone}
 
-Now, the Composer part of the system is identical to the regular IBM Composer, is it? Well, almost, but not exactly! Indeed, IBM could have decided to buid an I/O Composeer, as they did an I/O Selectric. But they opted not to. The market was probably too small for this to make sense. So instead, IBM opted to electromechanically control a standard Composer from the outside. This required making a few small changes to the standard Composer:
+Now, the Composer part of the system is identical to the regular IBM Composer, is it? Well, almost, but not exactly! Indeed, IBM could have decided to buid an I/O Composer, as they did an I/O Selectric. But they opted not to. The market was probably too small for this to make sense. So instead, IBM opted to electromechanically control a standard Composer from the outside. This required making a few small changes to the standard Composer:
 
 1. Add an opening at the bottom, with hooks, so that Composer keys can be activated.
 2. Add "photoelectric devices" inside the machine to detect the state of the machine's cycle.
@@ -117,7 +117,7 @@ Compare the two tape consoles' control panels:
 
 ![The control panels](/assets/posts/ibm-mtsc/2x/IMG_3012.jpg){:standalone}
 
-The inside of the tape console is similar to the other type console, excerpt:
+The inside of the tape console is similar to the other tape console, except:
 
 - there are two tape stations on top (but they share most of the components)
 - there are two tape trays inside
@@ -244,15 +244,15 @@ In addition to two tapes present in the MT reader of the Magnetic Tape Selectric
 
 ![One of the dirty tapes](/assets/posts/ibm-mtsc/2x/IMG_3512.jpg){:standalone}
 
-I decide to clen them right away as I couldn't stand the dirt. One of the tape cases opened very easily so I decided to just clean the case with water and detergent.
+I decide to clean them right away as I couldn't stand the dirt. One of the tape cartridges opened very easily, so I decided to just clean the cartridge with water and detergent.
 
-![Cleaning a type case](/assets/posts/ibm-mtsc/2x/IMG_3510.jpg){:standalone}
+![Cleaning a type element case](/assets/posts/ibm-mtsc/2x/IMG_3510.jpg){:standalone}
 
-I also managed to open the other tapes, although I did break a plastic tab or two. Dirt had come into the tape cases, so I gently blew air and brushed away the dust, while I properly cleaned the cases. I also cleaned the hubs with Q-tips.
+I also managed to open the other tapes, although I did break a plastic tab or two. Dirt had come into the tape cartridges, so I gently blew air and brushed away the dust, while I properly cleaned the cartridges. I also cleaned the hubs with Q-tips.
 
 Here are the 3 tapes after I cleaned and labeled them.
 
-![The tapes in their cases](/assets/posts/ibm-mtsc/2x/IMG_3737.jpg){:standalone}
+![The tapes in their cartridges](/assets/posts/ibm-mtsc/2x/IMG_3737.jpg){:standalone}
 
 Here is how you handle the tapes (in theory - I haven't been able to try this yet):
 
@@ -263,7 +263,7 @@ Here is how you handle the tapes (in theory - I haven't been able to try this ye
 
 !["LOAD"/"UNLOAD" buttons](/assets/posts/ibm-mtsc/2x/IMG_4686.jpg){:standalone}
 
-Like with a compact cassette, there is no manual winding or spooling of the tape needed. Even better, here the surface of the tape is never exposed to the user, and it's always guaranteed to be fully wound in its case.
+Like with a compact cassette, there is no manual winding or spooling of the tape needed. Even better, here the surface of the tape is never exposed to the user, and it's always guaranteed to be fully wound in its cartridge.
 
 Each tape has a little eyelet on its end. You can see this on the following picture, as well as the holes in the tape.
 
@@ -277,7 +277,7 @@ There is a fixed, plastic tape end inside the machine, that on one hand dips int
 
 The tapes are quite low density: each character includes 9 bits and is written across the 16 mm width of the tape, at 20 characters per inch. Each tape contains 100 feet of 16 mm magnetic tape. Approximately 24,000 characters can fit on a tape. IBM's estimate was that this would be equivalent to about 10 standard pages of text.
 
-Types, while playing back text, would go at about 15.5 character/second. The MT/ST search function is advertised as 900 character or 45 inch/second, while rewinding the tape would go at 32.5-52 inch/second.
+Tapes, while playing back text, would go at about 15.5 character/second. The MT/ST search function is advertised as 900 character or 45 inch/second, while rewinding the tape would go at 32.5-52 inch/second.
 
 ### Composer type elements
 
@@ -309,7 +309,7 @@ The middle number indicates the size of the font in points, while the last part 
 - `MI`: Medium Italic
 - `L`: Light
 
-I have since acquired a few more type elements.
+I have since acquired a few more type elements (thank you Ted and others!).
 
 ## The maintenance diagram manuals
 
@@ -343,7 +343,7 @@ I was graciously lent/donated a CZUR scanner by Ken Shirriff. With it, it was a 
 
 I should note that we are also missing a user manual for the system. We do have manuals for the MT/ST, for the Composer, but not, specifically, for the MT/SC. If you know of such manuals, which definitely must have existed at the time, please let me know! The "Development" article contains the closest we currently have from a user manual!
 
-UPDATE: I now know of a partial manual: "IBM Magnetic Tape Selectric Composer - Guide to Copy Preparation".
+_UPDATE: I now know of a partial manual: "IBM Magnetic Tape Selectric Composer - Guide to Copy Preparation". There is also a manual online entitled "IBM Magnetic Tape Selectric Composer - Record Unit Training Guide MT/ST Models II and IV (for Graphics)"._
 
 There is mention in the available documents of a paper tape reader. This was an optional interface and device to read existing paper tapes in a format called TeleTypeSetter (TTS) used by newspapers. This instance of the MT/SC doesn't come with this interface. It is unclear how widespread this standard was.
 
@@ -423,11 +423,11 @@ The "Development" article mentions that:
 
 > Many of the memory circuits and array components were selected from those used in existing products such as the IBM 2740 Buffer Terminal. Many of the memory circuits operate from logic-level inputs, so that no well-defined interface is needed between memory and logic.
 
-It could be that the memory module, in particular, is also present on the 2740, If anyone is able to confirm or inform that, it would be great.
+It could be that the memory module, in particular, is also present on the 2740, If anyone is able to confirm or infirm that, it would be great.
 
 ## Restoration plan 
 
-I was incredibly lucky to have the visit of Curious Marc and Ken Shirriff to have at look a the system. We talked a lot about the system and what will need to be done to get it working again. The think that there is hope with the system, including the electronics, which they have the skills to analyze and repair, and the tape drives - the two major areas of the system that I feel the least comfortable with.
+I was incredibly lucky to have the visit of [CuriousMarc](https://www.curiousmarc.com/) and [Ken Shirriff](https://www.righto.com/) to have a look at the system. We talked a lot about it and what will need to be done to get it working again. They think that there is good hope to get it working, including the electronics, which they have the skills to analyze and repair, and the tape drives - the two major areas of the system that I feel the least comfortable with.
 
 So I have put together a very simple restoration plan:
 
@@ -491,4 +491,16 @@ These bases are convenient to move things around. I also put new rubber feet on 
 
 In this post, I placed the IBM MT/SC in its context, described its various parts, and started digging into the details of the MT/SC instance that I acquired. The system received a basic cleaning, and is stored in reasonably good conditions. It has been fairly extensively photographically documented. Its unique documentation has been scanned for posterity. Finally, I outlined a restoration plan, which I hope will eventually unfold.
 
----
+## References
+
+- Photo albums
+    - [IBM Selectric MT/SR 655 (196x) - Part 1](https://photos.app.goo.gl/b2nUgQbtJqSAePYcA)
+    - [IBM Selectric Modified Composer (196x) - Part 1](https://photos.app.goo.gl/ZcerSWkfnVC6CTNW9)
+    - [IBM MT/ST Recorder Model V (1965) - Part 1](https://photos.app.goo.gl/frcRs9rP2K8xRmjq5)
+    - [IBM MT/SC Composer (1969) - Part 1](https://photos.app.goo.gl/f8FbWrTDhHTV4phU6)
+    - [MT/ST Composer/Recorder - Restoration in progress](https://photos.app.goo.gl/Kby6wp6gz5BGmnAn7)
+- TWDB
+    - [1969 IBM Selectric Recorder](https://typewriterdatabase.com/1969-ibm-selectric-recorder.22536.typewriter) 
+    - [1969 IBM Selectric Composer](https://typewriterdatabase.com/1969-ibm-selectric-composer.22534.typewriter)
+    - [1969 IBM Magnetic Tape Selectric Recorder](https://typewriterdatabase.com/1969-ibm-magnetic-tape-selectric-recorder.22539.typewriter)
+    - [1969 IBM Magnetic Tape Selectric Composer](https://typewriterdatabase.com/1969-ibm-magnetic-tape-selectric-composer.22538.typewriter)
