--- a/_posts/2024-07-05-ibm-mt-sc-1.md
+++ b/_posts/2024-07-05-ibm-mt-sc-1.md
@@ -299,7 +299,7 @@ The front panel includes the following:
         - Record: the machine is in record mode, and will write to tape.
         - Type: the machine works as a regular typewriter, without writing to tape.
 - Buttons
-    - __LINE RETURN:__ it is unclear whow different this is from the regular RETURN key on the typewriter.
+    - __LINE RETURN:__ it is unclear how different this is from the regular RETURN key on the typewriter.
     - __LOAD:__ for loading the tape (see below).
     - __UNLOAD:__ for unloading the tape (see below).
 
