--- a/_posts/2024-07-05-ibm-mt-sc-2.md
+++ b/_posts/2024-07-05-ibm-mt-sc-2.md
@@ -265,11 +265,11 @@ Here is how you handle the tapes (in theory - I haven't been able to try this ye
 
 Like with a compact cassette, there is no manual winding or spooling of the tape needed. Even better, here the surface of the tape is never exposed to the user, and it's always guaranteed to be fully wound in its cartridge.
 
-Each tape has a little eyelet on its end. You can see this on the following picture, as well as the holes in the tape.
+Each tape has a little eyelet on its end. You can see this on the following picture, as well as the sprocket holes in the tape.
 
-![The tape and its eyelet and holes](/assets/posts/ibm-mtsc/2x/IMG_3511.jpg){:standalone}
+![The tape and its eyelet and sprocket holes](/assets/posts/ibm-mtsc/2x/IMG_3511.jpg){:standalone}
 
-Inside the machine, the tape drive has a pin that grabs that eyelet and pulls the tape into the machine. There is no take-up spool inside the machine: instead, the tape gently folds into the plastic bin inside the machine. Also, the tapes have a track with holes, which allows the machine to drive them.
+Inside the machine, the tape drive has a pin that grabs that eyelet and pulls the tape into the machine. There is no take-up spool inside the machine: instead, the tape gently folds into the plastic bin inside the machine. Also, the tapes have a track with sprocket holes, which allows the machine to drive them.
 
 There is a fixed, plastic tape end inside the machine, that on one hand dips into the tape tray, and on the other hand hooks into the end of the actual tape. You can see it in this picture:
 
