--- a/_posts/2024-07-05-ibm-mt-sc-2.md
+++ b/_posts/2024-07-05-ibm-mt-sc-2.md
@@ -31,13 +31,13 @@ As discussed at the beginning of this article, this is what I saw first of the s
 
 ![The Composer](/assets/posts/ibm-mtsc/2x/IMG_2958.jpg){:standalone}
 
-It looks significantly different from the regular Selectric, and inside it is very different (although I am currently clueless about how it actually works).
+It looks significantly different from the regular Selectric, and this is reflected inside, which also differs significantly from the Selectric.
 
 The Composer has a built-in cover, which you lift during operation.
 
 ![The Composer with cover lifted](/assets/posts/ibm-mtsc/2x/IMG_2967.jpg){:standalone}
 
-The top case is removed easily, like with the regular Selectric. The inside was full of crumbled sound deadening foam, a common occurrence in IBM typewriter. 
+The top case is removed easily, like with the regular Selectric. The inside was full of crumbled sound deadening foam, a common occurrence in IBM typewriters.
 
 ![The dirty inside](/assets/posts/ibm-mtsc/2x/IMG_2980.jpg){:standalone}
 
