--- a/_posts/2024-07-05-ibm-mt-sc-2.md
+++ b/_posts/2024-07-05-ibm-mt-sc-2.md
@@ -45,7 +45,7 @@ You can see, on the back left, the part that deals with the proportional escapem
 
 ![The proportional esxapeement](/assets/posts/ibm-mtsc/2x/IMG_2986.jpg){:standalone}
 
-Now, the Composer part of the system is identical to the regular IBM Composer, is it? Well, almost, but not exactly! Indeed, IBM could have decided to buid an I/O Composer, as they did an I/O Selectric. But they opted not to. The market was probably too small for this to make sense. So instead, IBM opted to electromechanically control a standard Composer from the outside. This required making a few small changes to the standard Composer:
+Now, the Composer part of the system is identical to the regular IBM Composer, is it? Well, almost, but not exactly! Indeed, IBM could have decided to build an I/O Composer, as they did an I/O Selectric. But they opted not to. The market was probably too small for this to make sense. So instead, IBM opted to electromechanically control a standard Composer from the outside. This required making a few small changes to the standard Composer:
 
 1. Add an opening at the bottom, with hooks, so that Composer keys can be activated.
 2. Add "photoelectric devices" inside the machine to detect the state of the machine's cycle.
