Better link to parts

--- a/_posts/2024-07-05-ibm-mt-sc-1.md
+++ b/_posts/2024-07-05-ibm-mt-sc-1.md
@@ -11,6 +11,8 @@ category: Technology
 
 ## Introduction
 
+_This is part 1 of a two-part post. See also [The IBM Magnetic Tape Selectric Composer - Part 2](../ibm-mt-sc-2/)._
+
 For a few years now, I have been collecting IBM typewriters. That includes the Selectric, probably the best known of the IBM typewriters with its famous "golf ball" type element, but also older-style "typebar" typewriters, starting with the Electromatic and later Executive typewriters with feature proportional spacing and carbon ribbon. All of these are electromechanical machines.
 
 ![Electromechanical IBM typewriters: Electromatic (later IBM Model 01), Model 04 Executive, Model A Executive, Selectric I (two instances), Model D Executive, Correcting Selectric II (two instances), Correcting Selectric III](/assets/posts/ibm-mtsc/2x/ibm-typewriters-1.jpg){:standalone}
