--- a/_posts/2024-07-05-ibm-mt-sc-2.md
+++ b/_posts/2024-07-05-ibm-mt-sc-2.md
@@ -11,7 +11,9 @@ category: Technology
 
 ## Introduction
 
-In the first part, I placed the IBM MT/SC in its context, described its various parts at a high level, and covered the input station in more details. See [The IBM Magnetic Tape Selectric Composer - Part 1](../ibm-mt-sc-1/). In this part, I continue the exploration of the MT/SC, starting with the output station.
+_This is part 2 of a two-part post. See also [The IBM Magnetic Tape Selectric Composer - Part 1](../ibm-mt-sc-1/)._
+
+In the first part, I placed the IBM MT/SC in its context, described its various parts at a high level, and covered the input station in more details. In this part, I continue the exploration of the MT/SC, starting with the output station.
 
 ## The output station (MT/SC)
 
