--- a/_posts/2024-07-05-ibm-mt-sc-1.md
+++ b/_posts/2024-07-05-ibm-mt-sc-1.md
@@ -13,7 +13,7 @@ category: Technology
 
 _This is part 1 of a two-part post. See also [The IBM Magnetic Tape Selectric Composer - Part 2](../ibm-mt-sc-2/)._
 
-For a few years now, I have been collecting IBM typewriters. That includes the Selectric, probably the best known of the IBM typewriters with its famous "golf ball" type element, but also older-style "typebar" typewriters, starting with the Electromatic and later Executive typewriters with feature proportional spacing and carbon ribbon. All of these are electromechanical machines.
+For a few years now, I have been collecting IBM typewriters. That includes the Selectric, probably the best known of the IBM typewriters with its famous "golf ball" type element, but also older-style "typebar" typewriters, starting with the Electromatic, and later Executive typewriters which feature proportional spacing and carbon ribbon. All of these are electromechanical machines.
 
 ![Electromechanical IBM typewriters: Electromatic (later IBM Model 01), Model 04 Executive, Model A Executive, Selectric I (two instances), Model D Executive, Correcting Selectric II (two instances), Correcting Selectric III](/assets/posts/ibm-mtsc/2x/ibm-typewriters-1.jpg){:standalone}
 
@@ -51,7 +51,7 @@ __MT/SC (Magnetic Tape/Selectric Composer)__, which appeared derived from the MT
 
 ## The find
 
-Unexpectedly, in March, someone tipped me that an IBM Composer was available in my area. This was already of interest to me, but on the side of the picture was clearly (to me!) an IBM tape console that looked like the one used for the MT/ST.
+Unexpectedly, in March, someone (thank you Brian!) tipped me that an IBM Composer was available in my area. This was already of interest to me, but on the side of the picture was clearly (to me!) an IBM tape console that looked like the one used for the MT/ST.
 
 ![The picture from Craigslist!](/assets/posts/ibm-mtsc/2x/craigslist.jpg){:standalone}
 
