--- a/_posts/2024-07-05-ibm-mt-sc-2.md
+++ b/_posts/2024-07-05-ibm-mt-sc-2.md
@@ -96,9 +96,11 @@ MT/Reader
 
 ![The tape console](/assets/posts/ibm-mtsc/2x/IMG_3065.jpg){:standalone}
 
-This indicate or confirm that the purpose of the tape station is to "read" magnetic tapes only.
+This indicates, or rather confirms, that the purpose of the tape station is to "read" magnetic tapes only.
 
 The tape console include two so called "Tape Stations": a left tape station, and a right tape station. My understanding at this point is that they are not identical: the left one is meant to hold a "correction tape". while the right one holds a regular tape. The correction tape is typically produced from an MT/ST, but I am not sure an MT/ST Model V (MT/SR) can produce such a tape. Possibly.
+
+_UPDATE: Reading some documentation, it appears that you can create a correction tape with any MT/ST, including with Model V (AKA MT/SR). All it takes is the ability to write prefix codes to tape, which the MT/SR can most definitely do._
 
 The tape stations are locked with two electromagnets. The MT/SR tape station has a single electromagnet.
 
@@ -130,7 +132,9 @@ The inside of the tape console is similar to the other tape console, except:
 
 The tape console has a cable that connects to the MT/SC desk. There is no removable connector, so the cable is permanently attached to the console.
 
-There are 2 tapes inside the machine, loaded in their respective stations. However, they are not labeled. The fact that there are two hints that the "correction tape" might have been in use, and that, therefore, it was possible to make use of such a correction tape, and even maybe produce one from the MT/SR. But I am a little unclear on this at this point.
+There are 2 tapes inside the machine, loaded in their respective stations. They are not labeled. The fact that there are two hints that the "correction tape" might have been in use, and that, therefore, it was possible to make use of such a correction tape, and even maybe produce one from the MT/SR.
+
+_UPDATE: This is possible, see further comments above._
 
 ### The desk and electronics 
 
@@ -392,7 +396,7 @@ As an aside, I was curious as to how the MT/ST relate to the [IBM 2741 terminal]
 
 ![The IBM 2741 terminal](/assets/posts/ibm-mtsc/2x/ibm-2741-blue.jpg){:standalone width="75%"}
 
-(How can there not be a modern high-resolution picture of this terminal online?)
+(How can there not be a modern high-resolution picture of this terminal online? I created this one based on a manual for the terminal. I rotated the picture, smoothed it, and added a blue background.)
 
 There are obvious visual similarities:
 
@@ -405,7 +409,7 @@ The 2741 includes SLT-based electronics in its desk. So no relays here (the orig
 
 The keyboard has differences as well:
 
-- The MT/ST and MT/SR have a large extra PFX ("Prefix") key to the left, while the 2741 doesn't.
+- The MT/ST and MT/SR have a large extra PX ("Prefix") key to the left, while the 2741 doesn't.
 - The MT/ST has a "REV/CR" key, while the 2741 has an "ATTN" key.
 - The layout of special characters appears different (for example location of "!", "+", etc.)
 - The 2741 used a serial RS-232 connection, while the MT/ST's connector to the console is entirely proprietary. 
@@ -425,7 +429,7 @@ The "Development" article mentions that:
 
 > Many of the memory circuits and array components were selected from those used in existing products such as the IBM 2740 Buffer Terminal. Many of the memory circuits operate from logic-level inputs, so that no well-defined interface is needed between memory and logic.
 
-It could be that the memory module, in particular, is also present on the 2740, If anyone is able to confirm or infirm that, it would be great.
+It could be that the memory module, in particular, is also present on the 2740. If anyone is able to confirm or infirm that, it would be great to let me know.
 
 ## Restoration plan 
 
