--- a/_posts/2024-07-05-ibm-mt-sc-1.md
+++ b/_posts/2024-07-05-ibm-mt-sc-1.md
@@ -57,7 +57,7 @@ Unexpectedly, in March, someone (thank you Brian!) tipped me that an IBM Compose
 
 Would you have seen it? I am quite proud I did, but then I had been feeding myself images of the MT/ST for a while. On the other hand, retrospectively, I think I blanked on the desk console and binders when I first looked at the picture.
 
-I immediately contacted the seller, who confirmed the item was available, including the tape console. I dropped everything to rush to the place. This is what I saw when I arrived.
+I immediately contacted the seller (thank you Kelly!), who confirmed the item was available, including the tape console. I dropped everything to rush to the place. This is what I saw when I arrived.
 
 ![The machines as I first saw them](/assets/posts/ibm-mtsc/2x/IMG_2686.jpg){:standalone}
 
@@ -109,7 +109,9 @@ IBM's typewriter product line in the 1960s was not perfect or exactly simple, bu
 
 Given this product lineup, it was only natural for IBM to bring together the MT/ST and the Composer by means of electronics. IBM had all the in-house technology needed for this, given that it also had a line of powerful but extremely expensive mainframe computers.[^opd]
 
-The idea was this: you would use an MT/ST to enter text and save it to tape. Then you would move the tape to the MT/SC station, which would read the tape and produce typeset text. This included proportional text, right-margin justification, and even hyphenation. The following diagram, from a 1968 IBM paper, and which I colorized, shows the general idea of the system:
+An so the IBM MT/SC came out in 1967, quite soon after the standalone Composer's release. This indicates that development on the system must have started much earlier. How early, we might never know! 
+
+The general idea behind the MT/SC was as follows: you would use an MT/ST to enter text and save it to tape. Then you would move the tape to the MT/SC station, which would read the tape and produce typeset text. This included proportional text, right-margin justification, and even hyphenation. The following diagram, from a 1968 IBM paper, and which I colorized, shows the general idea of the system:
 
 ![Block diagram of an MT/SC system](/assets/posts/ibm-mtsc/2x/mt-sc-diagram-colorized.jpg){:standalone width="75%"}
 
