IBM MT/ST prototype

--- a/_posts/2024-07-05-ibm-mt-sc-1.md
+++ b/_posts/2024-07-05-ibm-mt-sc-1.md
@@ -25,11 +25,19 @@ But there is more to the world of IBM typewriters than those. During the 1950s a
 
 However, around that time, IBM also started looking internally at how their typewriters could be used in conjunction with paper or magnetic tape for word processing or publishing, with much more limited hardware needs, making them more affordable and suitable for office work.
 
-[//]: # (Here is a picture of a prototype from 1958 &#40;?&#41;:)
+UPDATE: Here is a picture of a prototype from around 1958:
 
-[//]: # (TODO: picture of the prototype)
+![IBM prototype of the MT/SC](/assets/posts/ibm-mtsc/2x/mtst-prototype.jpg){:standalone}
 
-And so in 1964, IBM's MT/ST (Magnetic Tape/Selectric Typewriter), the first dedicated word processor, reached the market. It wasn't cheap at $10,000 (or $100,000 in 2024 dollars). This was a very significant machine, and interesting in many ways. I plan to cover it in more details in a separate post. 
+You can see:
+
+- on the left, a keypunch for entry
+- in the center, the tape drive
+- on the right, the printer, which is a modified IBM Model B typewriter (or Model B I/O)
+
+The machine's electronics clearly feature relays, but also vacuum tubes! It is interesting to me that IBM eventually got rid of the tubes, kept the relays, but used "SMS" cards (some with transistors) instead of tubes for the rest. 
+
+It took IBM about 6 years and finally, in 1964, IBM's MT/ST (Magnetic Tape/Selectric Typewriter), the first dedicated word processor, reached the market. It wasn't cheap at $10,000 (or $100,000 in 2024 dollars). This was a very significant machine, and interesting in many ways. I plan to cover it in more details in a separate post. 
 
 ![The IBM Magnetic Tape Selectric Typewriter (MT/ST)](/assets/pages/typewriter-bucket-list/ibmmtst.jpg){:standalone}
 
