--- a/_posts/2024-07-05-ibm-mt-sc-1.md
+++ b/_posts/2024-07-05-ibm-mt-sc-1.md
@@ -27,7 +27,7 @@ However, around that time, IBM also started looking internally at how their type
 
 UPDATE: Here is a picture of a prototype from around 1958:
 
-![IBM prototype of the MT/SC](/assets/posts/ibm-mtsc/2x/mtst-prototype.jpg){:standalone}
+![IBM prototype of the MT/ST](/assets/posts/ibm-mtsc/2x/mtst-prototype.jpg){:standalone}
 
 You can see:
 
