--- a/_posts/2024-07-24-vic-20-key.md
+++ b/_posts/2024-07-24-vic-20-key.md
@@ -75,6 +75,6 @@ You can then close the VIC-20. My replacement key was a perfect match and the re
 
 ## Conclusion
 
-This was an easy fix, and the VIC-20 looks great after this replacement and a overall cleaning.
+This was an easy fix, and the VIC-20 looks great after this replacement and an overall cleaning.
 
 ![The fixed VIC-20](/assets/posts/vic20key/2x/IMG_4646.jpg){:standalone}
