--- a/_posts/2024-07-24-vic-20-key.md
+++ b/_posts/2024-07-24-vic-20-key.md
@@ -15,7 +15,7 @@ In late 2023, I acquired a Commodore VIC-20 computer. I had been thinking about 
 
 ![The VIC-20 and some accessories](/assets/posts/vic20key/2x/IMG_0019.jpg){:standalone}
 
-The VIC-20 had a broken `(`/`:` key. In fact, the key cap was missing and the key stem was broken. I ordered a replacement part from [retroleum.co.uk](https://www.retroleum.co.uk/vic20keys).
+The VIC-20 had a broken `(`/`:` key. In fact, the key cap was missing and the key stem was broken. So I ordered a replacement part from [retroleum.co.uk](https://www.retroleum.co.uk/vic20keys).
 
 ## Removing the old key
 
@@ -38,7 +38,7 @@ You also have to desolder the two wires for the `RUN`/`STOP` key, which is handl
 
 ![The desoldered `RUN`/`STOP` key wires](/assets/posts/vic20key/2x/IMG_1427.jpg){:standalone}
 
-You can then lift up the PCB.
+You can then lift the PCB.
 
 ![The open keyboard](/assets/posts/vic20key/2x/IMG_1731.jpg){:standalone}
 
@@ -57,7 +57,7 @@ The replacement key came with key cap, plunger and spring.
 
 ![The replacement key](/assets/posts/vic20key/2x/IMG_1628.jpg){:standalone}
 
-There are different plunger sizes, so you need to make sure your replacement has the right size. Here is the size that fit my VIC-20. 
+There are different plunger sizes, so you need to make sure your replacement has the right size. I had determined, when ordering from Retroleum, that I probably had a Type 1 key, and luckily that was correct. Here is the size that fits my VIC-20. 
 
 ![The new plunger's measurement](/assets/posts/vic20key/2x/IMG_1437.jpg){:standalone}
 
@@ -69,7 +69,7 @@ After installing the new key, you have to put back the PCB, screw back all the s
 
 ![The resoldered wires](/assets/posts/vic20key/2x/IMG_1734.jpg){:standalone}
 
-You can then close the VIC-20. My replacement key was a perfect match and the result looks perfect.
+You can then close the VIC-20. I had ordered a "Grade 1.5 - Minimal Yellowing" key from Retroleum, and that turned out to be a perfect match: the result looks perfect. 
 
 ![The fixed keyboard](/assets/posts/vic20key/2x/IMG_1733.jpg){:standalone}
 
