--- a/_posts/2024-07-24-vic-20-key.md
+++ b/_posts/2024-07-24-vic-20-key.md
@@ -24,13 +24,13 @@ To replace the key, you must:
 - open the VIC-20
 - partially disassemble the keyboard
 
-The VIC-20 is very easy to open: just remove the few screws, and the two parts of the case can be separated.
+The VIC-20 is very easy to open: just remove the screws at the bottom of the case, and the two parts of the case can be separated.
 
 ![The open VIC-20](/assets/posts/vic20key/2x/IMG_1730.jpg){:standalone}
 
 _NOTE: For cleaning, and out of curiosity, I removed the entire keyboard from the case, which is why you see the keyboard try out of the computer on some pictures. But this is not strictly necessary just to replace the key._ 
 
-To access the inside of the keyboard, you have to remove all the screws holding the PCB in place. You might have to partially lift the transparent sticky tape that secures the keyboard wires in place to access some of the screws. There is no need to completely remove it.   
+To access the inside of the keyboard, you have to remove all the screws holding the PCB in place. You might have to partially lift the transparent sticky tape that secures the keyboard wires in place to access some of the screws. There is no need to completely remove that tape.   
 
 ![The keyboard's bottom PCB screws](/assets/posts/vic20key/2x/IMG_1428.jpg){:standalone}
 
@@ -69,7 +69,7 @@ After installing the new key, you have to put back the PCB, screw back all the s
 
 ![The resoldered wires](/assets/posts/vic20key/2x/IMG_1734.jpg){:standalone}
 
-You can then close the VIC-20. I had ordered a "Grade 1.5 - Minimal Yellowing" key from Retroleum, and that turned out to be a perfect match: the result looks perfect. 
+You can then close the VIC-20. I had ordered a "Grade 1.5 - Minimal Yellowing" key from Retroleum, and that turned out to be a perfect match. 
 
 ![The fixed keyboard](/assets/posts/vic20key/2x/IMG_1733.jpg){:standalone}
 
