MT/SC: minor updates

--- a/_posts/2024-07-05-ibm-mt-sc-2.md
+++ b/_posts/2024-07-05-ibm-mt-sc-2.md
@@ -365,11 +365,11 @@ It would be interesting if we could, at some point, read text from the tape, and
 
 ### Rarity
 
-I mentioned at the top of this article that we, at of July 2024, do not know of any other surviving MT/SC. There are a few known MT/ST (none of them working, that we know of), but no MT/SC. Why would that be? Well, clearly there were less MT/SCs made compared to the MT/ST. The MT/SC was designed for a very specific market of cold publishing, while the MT/ST was much more widely applicable.
+I mentioned at the top of this article that we, at of July 2024, do not know of any other surviving MT/SC. There are a few known MT/ST (none of them working, that we know of), but no MT/SC. Why would that be? Well, clearly there were less MT/SCs made compared to the MT/ST. The MT/SC was designed for a very specific market of cold typesetting, while the MT/ST was much more widely applicable.
 
 In addition, and this applies to many IBM systems, these systems were expensive, and therefore often leased to customers. Once the leasing period was up, given the speed at which technology was moving in the 1960s, 1970s, and 1980s, the machines were usually thoroughly obsolete, and IBM would scrap them. A similar fate awaited machines that were bought (like our instance, probably) instead of leased anyway, as they were large, obsolete, and not pretty or collectible.
 
-Well into the 21st century, I can only disagree that these machines are not collectible, but imagine the situation around 1980, which such machines would typically be decomissioned.
+Well into the 21st century, I can only disagree that these machines are not collectible, but imagine the situation around 1980, which such machines would typically be decommissioned.
 
 Therefore, we are extremely lucky that *any* such machine has survived. I do hope that there are more, and I still hope to put my hands on an MT/ST at some point, but let's see!
 
@@ -438,7 +438,7 @@ I was incredibly lucky to have the visit of [CuriousMarc](https://www.curiousmar
 So I have put together a very simple restoration plan:
 
 1. Clean and fix the input (MT/SR) typewriter
-    - flush the old grease 
+    - ~~flush the old grease~~ 
     - ~~replace the tab pulley~~
     - relubricate
     - check operations with the hand cycle tool
